# a-curl-openai-plugin

./: BUILDING.md  CMakeLists.txt  Dockerfile  NOTICE  README.md  _config.yml  build.sh
examples/embeddings/: CMakeLists.txt
examples/embeddings/src/: embed_test.c  responses.c
examples/responses_01_basic_text/: CMakeLists.txt
examples/responses_01_basic_text/src/: basic_text.c  basic_text_cache_miss.c  basic_text_chain.c  basic_text_error.c  basic_text_instructions.c  basic_text_logprobs.c  basic_text_max_tokens.c  basic_text_parallel.c  basic_text_temperature_sweep.c
examples/responses_02_structured_output/: CMakeLists.txt
examples/responses_02_structured_output/src/: structured_array.c  structured_calendar_event.c  structured_chain_generate_then_expand.c  structured_chain_parallel_followup.c  structured_chain_single_followup.c  structured_contact_form.c  structured_invoice_line_items.c  structured_moderation_report.c  structured_nested.c  structured_options_with_null.c  structured_search_query.c  structured_single_object.c  structured_streaming_entities.c  structured_ui_tree.c  structured_validation_error.c  structured_validation_showcase.c
include/a-curl-openai-plugin/parsers/v1/: responses_output.h
include/a-curl-openai-plugin/plugins/v1/: embeddings.h  responses.h  responses_delete.h  responses_get.h  responses_input_items.h
include/a-curl-openai-plugin/plugins/v1/chat/: completions.h
include/a-curl-openai-plugin/sinks/v1/: embeddings.h  responses.h  responses_stream.h
include/a-curl-openai-plugin/sinks/v1/chat/: completions.h
include/an-openai-api-library/parsers/v1/: responses_output.h
include/an-openai-api-library/plugins/v1/: embeddings.h  responses.h  responses_delete.h  responses_get.h  responses_input_items.h
include/an-openai-api-library/plugins/v1/chat/: completions.h
include/an-openai-api-library/sinks/v1/: embeddings.h  responses.h  responses_stream.h
include/an-openai-api-library/sinks/v1/chat/: completions.h
src/parsers/v1/: responses_output.c
src/plugins/v1/: embeddings.c  responses.c  responses_admin.c  responses_ext.c
src/plugins/v1/chat/: completions.c
src/sinks/v1/: embeddings.c  responses.c  responses_stream.c
src/sinks/v1/chat/: completions.c
tests/: CMakeLists.txt
tests/src/: test_embeddings.c
